
* suppress 'Unknown or uninitialised column' warning in crawlWrap when obsData is an sf object

* removed initial SANN optimization when using retryFits in crawlWrap

* reduced worker memory pressure in crawlWrap when running in parallel

* deprecated arguments cons and workcons are now defunct

BUG FIXES

* mixtureProbs function produced an error when initial distribution formula includes covariates

* avoid numerical underflow in mixtureProbs when a mixture probability is zero

* overly restrictive check for time-varying covariates in fitHMM when stationary=TRUE


momentuHMM 1.5.1 2020-03-04
-----------------
CHANGES

* stationary argument in fitHMM and MIfitHMM can now be set to TRUE when there are no time-varying covariates included in formula; in this case the initial distribution is calculated independently for each individual

* in prepData, data streams can now be named 'step' and/or 'angle' when coordNames=NULL

BUG FIXES

* fitHMM and MIfitHMM argument 'retryFits' failed to randomly perturb parameter values in momentuHMM 1.5.0

* 'toState' special formula did not account for non-default values in 'betaRef' argument


momentuHMM 1.5.0 2019-12-17
-----------------
NEW FEATURES

* hierarchical HMMs can now be fitted and simulated using the fitHMM, MIfitHMM, and simHierData functions

* discrete individual-level random effects now available on state transition probabilities via the 'mixtures' and 'formulaPi' arguments in fitHMM, MIfitHMM, simData, and simHierData

* discrete-time version of Hooten et al (2019; <doi:10.1111/ele.13198>) recharge model has been added

* 'mvnorm2' (bivariate normal) and 'mvnorm3' (trivariate normal) data stream distributions have been added

* 'rw_norm' (normal random walk), 'rw_mvnorm2' (bivariate normal random walk), and 'rw_mvnorm3' (trivariate normal random walk) data stream distributions have been added
